# groundwork

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
commands/: groundwork.md
docs/: manual-checklist.md
docs/brand/samples/: index.html
docs/brand/samples/ai/: editorial-values.prompt.txt  glyph-study.prompt.txt  hero-texture-subtle.prompt.txt  hero-texture.prompt.txt
docs/frameworks/: _README.md  coaching-habit-7q.md  gleb-modes.md  ikigai.md
docs/plans/: 2026-04-16-groundwork-v1-implementation.md
docs/schemas/: artifact.schema.yaml  framework.schema.yaml  profile.schema.yaml  skill.schema.yaml
docs/specs/: 2026-04-16-groundwork-design.md
scripts/: nano-banana.py  sync-frameworks.sh  validate.py
skills/groundwork-ask/: SKILL.md
skills/groundwork-brand/: SKILL.md
skills/groundwork-framework/: SKILL.md
skills/groundwork-ingest/: SKILL.md
skills/groundwork-intake/: SKILL.md
skills/groundwork-review/: SKILL.md
skills/groundwork-rhythm/: SKILL.md
skills/groundwork-seed/: SKILL.md
skills/groundwork-session/: SKILL.md
skills/groundwork-synthesize/: SKILL.md
skills/groundwork-visual-card/: SKILL.md
template-vault/: README.md
template-vault/.groundwork/: profile.md
template-vault/.groundwork/artifacts/: values.md
template-vault/.groundwork/frameworks/: 5-prism.md  README.md  act-values.md  grow.md
template-vault/.groundwork/intake/: research-findings.md
template-vault/.groundwork/visuals/brand/: brand.md  (+1 more)
tests/: conftest.py  test_artifact_schema.py  test_framework_schema.py  test_profile_schema.py  test_skill_manifests.py
(+1 files in other folders)
