[project]
name = "groundwork-tools"
version = "0.1.0"
description = "Validation tooling for the groundwork skill pack"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
